colour and gif change

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <body>
         <div class="container">
             <div >
-                <h1 class = "header_text">Do you wanna go out with me ehe</h1>
+                <h1 class = "header_text">Do you wanna hang out with me tomorrow?</h1>
             </div>
             <div class="gif_container">
-                <img src="https://media.giphy.com/media/LnKonfpQ44fNvuGLkA/giphy.gif" alt="Cute animated illustration">
+                <img src="https://64.media.tumblr.com/tumblr_mbsdjy5ol11ra03d4o1_500.gif" alt="Crazy animated illustration">
             </div>
             <div class = "buttons">
                 <button class="btn" id = "yesButton" onclick="nextPage()">Yes</button>
