--- a/yes.html
+++ b/yes.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <link rel="stylesheet" href="./style/css/yes_styles.css">
-        
-    </head> 
-    <body>
-        <div class="container">
-            <div >
-                <h1 class = "header_text">Yippie!!! </h1>
-            </div>
-            <div class="gif_container">
-                <img src="https://gifdb.com/images/high/yippee-sparkle-cartoon-aofuvbenw4whtcca.gif" alt="Cute animated illustration">
-            </div>
-            <p class = "text"> See you soon then!</p>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/css/yes_styles.css">
+    <title>Document</title>
+</head>
+
+<body>
+    <div class="container">
+        <div>
+            <h1 class="header_text">Yippie!!! </h1>
         </div>
-       
-    </body> 
+        <div class="gif_container">
+            <img src="https://gifdb.com/images/high/yippee-sparkle-cartoon-aofuvbenw4whtcca.gif"
+                alt="Cute animated illustration">
+        </div>
+        <p class="text"> See you soon then!</p>
+    </div>
+
+</body>
+
 </html>
